REGRESSION(r287138) [GLIB] Build failure with GCC 8 and 9 in std::array to Span conversion https://bugs.webkit.org/show_bug.cgi?id=234412

Reviewed by Darin Adler.

GCC < 10 and Clang < 7 have problems doing the conversion of the value if its marked const.

No new tests, is a build fix.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::inheritsPresentationalRole const):



Canonical link: https://commits.webkit.org/245343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287173 268f45cc-cd09-0410-ab3c-d52691b4dbfc